Cherry-pick r272073. rdar://problem/73847891

font-stretch is not applied to system-ui
    https://bugs.webkit.org/show_bug.cgi?id=221103
    <rdar://problem/73719139>

    Reviewed by Darin Adler.

    Source/WebCore:

    We just never hooked it up.

    Tests: fast/text/system-font-width-2.html
           fast/text/system-font-width-3.html
           fast/text/system-font-width-4.html
           fast/text/system-font-width-5.html
           fast/text/system-font-width-6.html
           fast/text/system-font-width-7.html
           fast/text/system-font-width-8.html
           fast/text/system-font-width-9.html
           fast/text/system-font-width.html

    * platform/graphics/cocoa/SystemFontDatabaseCoreText.cpp:
    (WebCore::SystemFontDatabaseCoreText::createSystemUIFont):
    (WebCore::SystemFontDatabaseCoreText::createSystemDesignFont):
    (WebCore::SystemFontDatabaseCoreText::createTextStyleFont):
    (WebCore::SystemFontDatabaseCoreText::createFontByApplyingWeightWidthItalicsAndFallbackBehavior):
    (WebCore::mapWeight):
    (WebCore::mapWidth):
    (WebCore::SystemFontDatabaseCoreText::systemFontParameters):
    (WebCore::SystemFontDatabaseCoreText::createFontByApplyingWeightItalicsAndFallbackBehavior): Deleted.
    * platform/graphics/cocoa/SystemFontDatabaseCoreText.h:
    (WebCore::SystemFontDatabaseCoreText::CascadeListParameters::operator== const):
    (WebCore::SystemFontDatabaseCoreText::CascadeListParameters::hash const):

    Source/WebCore/PAL:

    * pal/spi/cocoa/CoreTextSPI.h:

    Source/WTF:

    * wtf/PlatformHave.h:

    LayoutTests:

    * fast/text/system-font-width-2-expected-mismatch.html: Added.
    * fast/text/system-font-width-2.html: Added.
    * fast/text/system-font-width-3-expected-mismatch.html: Added.
    * fast/text/system-font-width-3.html: Added.
    * fast/text/system-font-width-4-expected-mismatch.html: Added.
    * fast/text/system-font-width-4.html: Added.
    * fast/text/system-font-width-5-expected.html: Added.
    * fast/text/system-font-width-5.html: Added.
    * fast/text/system-font-width-6-expected-mismatch.html: Added.
    * fast/text/system-font-width-6.html: Added.
    * fast/text/system-font-width-7-expected-mismatch.html: Added.
    * fast/text/system-font-width-7.html: Added.
    * fast/text/system-font-width-8-expected-mismatch.html: Added.
    * fast/text/system-font-width-8.html: Added.
    * fast/text/system-font-width-9-expected-mismatch.html: Added.
    * fast/text/system-font-width-9.html: Added.
    * fast/text/system-font-width-expected-mismatch.html: Added.
    * fast/text/system-font-width.html: Added.
    * platform/ios/TestExpectations:
    * platform/mac/TestExpectations:
    * platform/win/TestExpectations:

    Canonical link: https://commits.webkit.org/233492@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272073 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.130@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272288 268f45cc-cd09-0410-ab3c-d52691b4dbfc